[project]
authors = [
  {author = "seriaati", email = "seria.ati@gmail.com"},
]
dependencies = [
  "aiofiles>=24.1.0",
  "aiohttp-client-cache[sqlite]>=0.11.0",
  "jishaku>=2.5.2",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "tortoise-orm[asyncpg]>=0.21.6",
  "seria-library>=1.5.4",
  "uvloop>=0.20.0; platform_system == 'Linux'",
  "discord-py>=2.4.0",
  "loguru>=0.7.2",
]
description = "Discord bot that fixes social media embeds"
license = {file = "LICENSE"}
name = "embed-fixer"
readme = "README.md"
requires-python = ">=3.11"
version = "1.2.6"

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.2",
]
