[project]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
dependencies = [
  "aiofiles>=24.1.0",
  "jishaku>=2.5.2",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "tortoise-orm[asyncpg]>=0.21.6",
  "seria-library>=1.5.4",
  "uvloop>=0.20.0; platform_system == 'Linux'",
  "discord-py>=2.4.0",
  "loguru>=0.7.2",
  "aerich>=0.8.0",
  "pydantic>=2.10.4",
  "fake-useragent>=2.0.3",
]
description = "Discord bot that fixes social media embeds"
license = { file = "LICENSE" }
name = "embed-fixer"
readme = "README.md"
requires-python = ">=3.11"
version = "1.5.1"

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"

[tool.aerich]
tortoise_orm = "embed_fixer.db_config.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
