[project]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
dependencies = [
  "aiofiles>=24.1.0",
  "jishaku>=2.5.2",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "tortoise-orm[asyncpg]>=0.21.6",
  "uvloop>=0.20.0; platform_system == 'Linux'",
  "discord-py>=2.4.0",
  "loguru>=0.7.2",
  "aerich[toml]>=0.8.0",
  "pydantic>=2.10.4",
  "redis[hiredis]>=6.2.0",
  "aiohttp-client-cache>=0.13.0",
  "aiosqlite>=0.21.0",
  "iso639-lang>=2.6.3",
  "anyio>=4.10.0", # Temporarily added, see aerich/#480
  "emoji>=2.15.0",
  "sentry-sdk>=2.39.0",
  "tomli>=2.2.1",
  "pydantic-settings>=2.11.0",
]
description = "Discord bot that fixes social media embeds"
license = { file = "LICENSE" }
name = "embed-fixer"
readme = "README.md"
requires-python = ">=3.11"
version = "1.8.16"

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"

[tool.aerich]
tortoise_orm = "embed_fixer.core.db_config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
